--- a/P3-style.css
+++ b/P3-style.css
@@ -25,6 +25,11 @@ h3
     font-family: 'shrikhand', 'Times New Roman', Times, serif;
 }
 
+p
+{
+    margin: 0;
+}
+
 /* Page acceuil Mobile */
 @media screen and (max-width: 799px)
 {
@@ -46,11 +51,19 @@ h3
 
     .localisation
     {
-    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+    padding: 2%;
     background-color: #dddddd;
-    border-top: 3px solid grey;
-    display: inline-block;
+    border-top: 3px solid rgb(177, 177, 177);
     text-align: center;
+    }
+
+    .localisation>.fas
+    {
+    margin-right: 2%;
     }
 
     .explication
@@ -85,7 +98,6 @@ h3
     .fonctionnement
     {
         padding: 2%;
-        text-align: center;
         display: flex;
         flex-direction: column;
     }
@@ -96,6 +108,12 @@ h3
         flex-direction: row;
         flex-wrap: nowrap;
         padding: 2%;
+        padding-left: 0;
+        background-color: #f2f2f2;
+        border-radius: 20px;
+        box-shadow: 0px 3px 5px rgb(177, 177, 177);
+        margin-bottom: 2%;
+        align-items: center;
     }
 
     .F2
@@ -104,6 +122,12 @@ h3
         flex-direction: row;
         flex-wrap: nowrap;
         padding: 2%;
+        padding-left: 0;
+        background-color: #f2f2f2;
+        border-radius: 20px;
+        box-shadow: 0px 3px 5px rgb(177, 177, 177);
+        margin-bottom: 2%;
+        align-items: center;
     }
 
     .F3
@@ -112,6 +136,27 @@ h3
         flex-direction: row;
         flex-wrap: nowrap;
         padding: 2%;
+        padding-left: 0;
+        background-color: #9256dc46;
+        border-radius: 20px;
+        box-shadow: 0px 3px 5px rgb(177, 177, 177);
+        margin-bottom: 2%;
+        align-items: center;
+    }
+
+    .F1>.fas
+    {
+        color: grey;
+    }
+
+    .F2>.fas
+    {
+        color: grey;
+    }
+
+    .F3>.fas
+    {
+        color: #9356DC;
     }
 
     .num
@@ -122,16 +167,13 @@ h3
         height: 20px;
         padding: 1%;
         border-radius: 100%;
-    }
-
-    .fonctionnement p
-    {
-        margin: 0;
+        text-align: center;
     }
 
     .fonctionnement .fas
     {
-        size: 1.1em;
+        padding: 2%;
+        font-size: 1.1em;
     }
 }
 
