--- a/P3-style-index.scss
+++ b/P3-style-index.scss
@@ -37,7 +37,7 @@
         text-decoration: none;
         color: white;
         padding: 2%;
-        background-color: #9356DC;
+        background-color: $primary-color;
         border-radius: 30px 30px 30px 30px;
         box-shadow: 1px 1px 1px grey;
     }
@@ -48,48 +48,42 @@
     padding: 2%;
     display: flex;
     flex-direction: column;
+    .fas
+    {
+	    padding: 2%;
+	    font-size: 1.1em;
+    }
+}
+
+@mixin F0($background-color: #f2f2f2) {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    padding: 2%;
+    padding-left: 0;
+    background-color: $background-color;
+    border-radius: 20px;
+    box-shadow: 0px 3px 5px rgb(177, 177, 177);
+    margin-bottom: 2%;
+    align-items: center;
 }
 
 .F1
 {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    padding: 2%;
-    padding-left: 0;
-    background-color: #f2f2f2;
-    border-radius: 20px;
-    box-shadow: 0px 3px 5px rgb(177, 177, 177);
-    margin-bottom: 2%;
-    align-items: center;
+    @include F0()
 }
 
 .F2
 {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    padding: 2%;
-    padding-left: 0;
-    background-color: #f2f2f2;
-    border-radius: 20px;
-    box-shadow: 0px 3px 5px rgb(177, 177, 177);
-    margin-bottom: 2%;
-    align-items: center;
+    @include F0()
 }
 
 .F3
 {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    padding: 2%;
-    padding-left: 0;
-    background-color: #9256dc46;
-    border-radius: 20px;
-    box-shadow: 0px 3px 5px rgb(177, 177, 177);
-    margin-bottom: 2%;
-    align-items: center;
+    @include F0();
+    &--purple{
+        background-color: #9256dc25;
+    }
 }
 
 .F1>.fas
@@ -109,7 +103,7 @@
 
 .num
 {
-	background-color: #9356DC;
+	background-color: $primary-color;
 	color: white;
 	width: 20px;
 	height: 20px;
@@ -118,8 +112,3 @@
 	text-align: center;
 }
 
-.fonctionnement .fas
-{
-	padding: 2%;
-	font-size: 1.1em;
-}
