--- a/P3-style-main.scss
+++ b/P3-style-main.scss
@@ -13,7 +13,7 @@ body
     padding: 0;
 }
 
-$primary-color: #9356DC;
+$primary-color: #9256dc;
 $secondary-color: #FF79DA;
 $tertiary-color: #99E2D0;
 
