--- a/P3-style-page.css
+++ b/P3-style-page.css
@@ -1,2 +1,39 @@
+@font-face {
+  font-family: "roboto";
+  src: url(fonts-roboto/Roboto-Medium.ttf);
+  font-family: "shrikhand";
+  src: url(fonts-shrikhand/Shrikhand-Regular.otf);
+}
+body {
+  font-family: "roboto", "Times New Roman", Times, serif;
+  margin: 0;
+  padding: 0;
+}
 
-/*# sourceMappingURL=P3-style-page.css.map *//*# sourceMappingURL=P3-style-page.css.map */
+h1 {
+  text-align: start;
+  width: 100%;
+  margin: 0;
+}
+
+h3 {
+  font-family: "shrikhand", "Times New Roman", Times, serif;
+}
+
+p {
+  margin: 0;
+}
+
+.hlogo {
+  width: 300px;
+  height: 50px;
+  text-align: center;
+  padding: 2%;
+  margin: auto;
+  margin-top: 2%;
+}
+
+.hlogo > img {
+  width: 100%;
+  height: 100%;
+}/*# sourceMappingURL=P3-style-page.css.map */
