--- a/P3-style-index.scss
+++ b/P3-style-index.scss
@@ -7,7 +7,7 @@
     flex-wrap: nowrap;
     justify-content: center;
     padding: 2%;
-    background-color: #dddddd;
+    background-color: $grey-color;
     border-top: 3px solid rgb(177, 177, 177);
     text-align: center;
     .fas
@@ -18,7 +18,7 @@
 
 .explication
 {
-    background-color: #f2f2f2;
+    background-color: $palegrey-color;
     margin: auto;
     padding: 2%;
     text-align: center;
@@ -38,7 +38,7 @@
         color: white;
         padding: 2%;
         background-color: $primary-color;
-        border-radius: 30px 30px 30px 30px;
+        border-radius: 50px 50px 50px 50px;
         box-shadow: 1px 1px 1px grey;
     }
 }
@@ -55,50 +55,44 @@
     }
 }
 
-@mixin F0($background-color: #f2f2f2) {
+@mixin F0($background-color: $palegrey-color) {
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
-    padding: 2%;
+    padding: 1%;
     padding-left: 0;
     background-color: $background-color;
     border-radius: 20px;
     box-shadow: 0px 3px 5px rgb(177, 177, 177);
-    margin-bottom: 2%;
+    margin-top: 2%;
     align-items: center;
 }
 
 .F1
 {
-    @include F0()
+    @include F0();
+    .fas
+    {
+        color: $darkergrey-color;
+    }
 }
 
 .F2
 {
-    @include F0()
+    @include F0();
+    .fas
+    {
+        color: $darkergrey-color;
+    }
 }
 
 .F3
 {
-    @include F0();
-    &--purple{
-        background-color: #9256dc25;
+    @include F0($background-color: #9256dc25);
+    .fas
+    {
+        color: $primary-color;
     }
-}
-
-.F1>.fas
-{
-    color: grey;
-}
-
-.F2>.fas
-{
-    color: grey;
-}
-
-.F3>.fas
-{
-    color: #9356DC;
 }
 
 .num
@@ -107,7 +101,7 @@
 	color: white;
 	width: 20px;
 	height: 20px;
-	padding: 1%;
+	padding: 0.5%;
 	border-radius: 100%;
 	text-align: center;
 }
