--- a/P3-style-main.css
+++ b/P3-style-main.css
@@ -24,15 +24,26 @@ h3 {
 }
 
 .hlogo {
-  width: 300px;
+  display: flex;
   height: 50px;
-  text-align: center;
-  padding: 2%;
+  align-items: center;
+  padding: 1%;
   margin: auto;
 }
+.hlogo a {
+  display: flex;
+  text-decoration: none;
+  color: black;
+}
+.hlogo a .fas {
+  font-size: 1.75em;
+}
 .hlogo img {
-  width: 100%;
+  width: 300px;
   height: 100%;
+  margin: auto;
+  position: relative;
+  left: -15px;
 }
 
 footer {
