--- a/P3-style-main.scss
+++ b/P3-style-main.scss
@@ -14,6 +14,16 @@ $darkergrey-color: darken($grey-color,50%);
 $palegrey-color: #f6f6f6;
 $footer-color: #353535;
 
+@mixin btn {
+    width: 300px;
+    height: 50px;
+    margin: 2%;
+    padding: 2%;
+    background-color: $primary-color;
+    border-radius: 50px 50px 50px 50px;
+    box-shadow: 1px 1px 1px $darkergrey-color;
+}
+
 body
 {
     font-family: 'roboto', 'Times New Roman', Times, serif;
@@ -39,15 +49,28 @@ h3
 
 .hlogo
 {
-    width: 300px;
+    display: flex;
     height: 50px;
-    text-align: center;
-    padding: 2%;
+    align-items: center;
+    padding: 1%;
     margin: auto;
+    a
+    {
+        display: flex;
+        text-decoration: none;
+        color: black;
+        .fas
+        {
+            font-size: 1.75em;
+        }
+    }
     img
     {
-        width: 100%;
+        width: 300px;
         height: 100%;
+        margin: auto;
+        position: relative;
+        left: -15px;
     }
 }
 
