--- a/P3-style-page.css
+++ b/P3-style-page.css
@@ -14,9 +14,11 @@ body p {
 }
 
 h1 {
+  font-size: 1.75em;
   text-align: start;
   width: 100%;
   margin: 0;
+  margin-bottom: 1%;
 }
 
 h3 {
@@ -31,9 +33,9 @@ h3 {
   margin: auto;
 }
 .hlogo a {
-  display: flex;
   text-decoration: none;
   color: black;
+  display: flex;
 }
 .hlogo a .fas {
   font-size: 1.75em;
