--- a/P3-style-index.css
+++ b/P3-style-index.css
@@ -21,6 +21,10 @@ h1 {
   margin-bottom: 1%;
 }
 
+h2 {
+  margin: 0;
+}
+
 h3 {
   font-family: "shrikhand", "Times New Roman", Times, serif;
 }
@@ -246,18 +250,52 @@ footer .flien a .fas {
   padding: 2%;
   background-color: #f6f6f6;
 }
-#ancre-restaurant .restaurant {
-  display: flex;
-}
 #ancre-restaurant .restaurant a {
   text-decoration: none;
   color: black;
+  display: inline-block;
+  flex-direction: row;
+  width: 45%;
+  background-color: white;
+  border-radius: 20px 20px 20px 20px;
+  box-shadow: 0px 4px 7px -3px #6b6b6b;
+  margin-top: 2.5%;
+  margin-inline: 2%;
+}
+@media (max-width: 799px) {
+  #ancre-restaurant .restaurant a {
+    width: 100%;
+  }
+}
+#ancre-restaurant .restaurant a img {
   width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
+  border-radius: 20px 20px 0px 0px;
+  z-index: 1;
 }
 #ancre-restaurant .restaurant a .new {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
   background-color: #99E2D0;
   color: #278870;
   padding: 10px;
+  z-index: 2;
+  position: relative;
+}
+#ancre-restaurant .restaurant a .blocrestotxt {
+  display: flex;
+  flex-direction: row;
+}
+#ancre-restaurant .restaurant a .blocrestotxt .restotxt {
+  padding: 2%;
+  width: 70%;
+  margin: 0;
+}
+#ancre-restaurant .restaurant a .blocrestotxt .coeur {
+  font-size: 1.75em;
+  width: 20%;
+  margin: auto;
+  text-align: center;
 }/*# sourceMappingURL=P3-style-index.css.map */
