--- a/P3-style-main.scss
+++ b/P3-style-main.scss
@@ -51,6 +51,11 @@ h1
     margin-bottom: 1%;
 }
 
+h2
+{
+    margin: 0;
+}
+
 h3
 {
     font-family: 'shrikhand', 'Times New Roman', Times, serif;
