--- a/P3-style-main.css
+++ b/P3-style-main.css
@@ -27,6 +27,17 @@ h2 {
 
 h3 {
   font-family: "shrikhand", "Times New Roman", Times, serif;
+  font-size: 2em;
+}
+
+h4 {
+  font-size: 1.5;
+  margin: 0;
+}
+
+h5 {
+  font-size: 1.25em;
+  margin: 0;
 }
 
 .hlogo {
