--- a/P3-style-page.css
+++ b/P3-style-page.css
@@ -21,8 +21,23 @@ h1 {
   margin-bottom: 1%;
 }
 
+h2 {
+  margin: 0;
+}
+
 h3 {
   font-family: "shrikhand", "Times New Roman", Times, serif;
+  font-size: 2em;
+}
+
+h4 {
+  font-size: 1.5;
+  margin: 0;
+}
+
+h5 {
+  font-size: 1.25em;
+  margin: 0;
 }
 
 .hlogo {
@@ -87,4 +102,57 @@ footer .flien a {
 }
 footer .flien a .fas {
   margin-right: 2%;
+}
+
+.imgfond {
+  position: static;
+}
+.imgfond img {
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  position: static;
+}
+
+.titre {
+  padding: 2%;
+}
+.titre div {
+  display: flex;
+  flex-direction: row;
+  text-align: center;
+  justify-content: space-around;
+}
+.titre div .coeur {
+  font-size: 1.75em;
+  width: 20%;
+}
+
+.menu {
+  padding: 10px;
+  background-color: white;
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 2%;
+}
+.menu .txtmenu {
+  width: 70%;
+}
+.menu .prix {
+  width: 20%;
+}
+.menu .selection {
+  display: none;
+}
+
+button {
+  text-decoration: none;
+  color: white;
+  width: 200px;
+  height: 20px;
+  padding: 20px;
+  margin: auto;
+  background: linear-gradient(0.48turn, #FF79DA, #9256dc);
+  border-radius: 50px 50px 50px 50px;
+  box-shadow: 0px 4px 7px -3px #6b6b6b;
 }/*# sourceMappingURL=P3-style-page.css.map */
