--- a/P3-style-index.css
+++ b/P3-style-index.css
@@ -27,6 +27,18 @@ h2 {
 
 h3 {
   font-family: "shrikhand", "Times New Roman", Times, serif;
+  font-size: 2em;
+  margin: 0;
+}
+
+h4 {
+  font-size: 1.5;
+  margin: 0;
+}
+
+h5 {
+  font-size: 1.25em;
+  margin: 0;
 }
 
 .hlogo {
@@ -264,7 +276,7 @@ footer .flien a .fas {
 }
 @media (max-width: 799px) {
   #ancre-restaurant .restaurant a {
-    width: 100%;
+    width: auto;
   }
 }
 #ancre-restaurant .restaurant a img {
