--- a/P3-style-page.css
+++ b/P3-style-page.css
@@ -28,6 +28,7 @@ h2 {
 h3 {
   font-family: "shrikhand", "Times New Roman", Times, serif;
   font-size: 2em;
+  margin: 0;
 }
 
 h4 {
@@ -114,6 +115,11 @@ footer .flien a .fas {
   position: static;
 }
 
+.corps {
+  background-color: #f6f6f6;
+  border-radius: 50px 50px 0 0;
+}
+
 .titre {
   padding: 2%;
 }
@@ -128,18 +134,29 @@ footer .flien a .fas {
   width: 20%;
 }
 
+.entrees, .desserts, .plats {
+  padding: 2%;
+}
+
 .menu {
   padding: 10px;
   background-color: white;
   display: flex;
   flex-direction: row;
   margin-bottom: 2%;
+  border-radius: 15px 15px 15px 15px;
+  box-shadow: 0px 4px 7px -3px #6b6b6b;
 }
 .menu .txtmenu {
   width: 70%;
 }
 .menu .prix {
   width: 20%;
+  justify-content: flex-end;
+}
+.menu .prix p {
+  text-align: end;
+  height: auto;
 }
 .menu .selection {
   display: none;
