--- a/P3-style-index.scss
+++ b/P3-style-index.scss
@@ -149,15 +149,6 @@
         border-radius: 20px 20px 0px 0px;
         z-index: 1;
     }
-    .new
-    {
-        width: fit-content;
-        background-color: $tertiary-color;
-        color: darken($color: $tertiary-color, $amount: 40%);
-        padding: 10px;
-        z-index: 2;
-        position: relative;
-    }
     .blocrestotxt
     {
         display: flex;
@@ -188,6 +179,17 @@
         {
             @include lien();
             @include restoindex();
+            .new
+            {
+                width: fit-content;
+                background-color: $tertiary-color;
+                color: darken($color: $tertiary-color, $amount: 40%);
+                padding: 10px;
+                z-index: 2;
+                position: absolute;
+                top: 12px;
+                right: 12px;
+            }
         }
     }
 }
