--- a/P3-style-main.css
+++ b/P3-style-main.css
@@ -47,6 +47,7 @@ h5 {
   align-items: center;
   padding: 10px;
   margin: auto;
+  background-color: white;
 }
 .hlogo a {
   text-decoration: none;
@@ -71,7 +72,10 @@ footer {
   padding: 1%;
 }
 footer .flogo {
+  font-family: "shrikhand", "Times New Roman", Times, serif;
   padding-bottom: 1%;
+  font-size: 1.5em;
+  color: white;
 }
 footer .flogo img {
   color: white;
