--- a/P3-style-main.scss
+++ b/P3-style-main.scss
@@ -82,6 +82,7 @@ h5
     align-items: center;
     padding: 10px;
     margin: auto;
+    background-color: white;
     a
     {
         @include lien();
@@ -109,7 +110,10 @@ footer
     padding: 1%;
     .flogo
     {
+        font-family: 'shrikhand', 'Times New Roman', Times, serif;
         padding-bottom: 1%;
+        font-size: 1.5em;
+        color: white;
         img
         {
             color: white;
