--- a/P3-style-page.css
+++ b/P3-style-page.css
@@ -47,6 +47,7 @@ h5 {
   align-items: center;
   padding: 10px;
   margin: auto;
+  background-color: white;
 }
 .hlogo a {
   text-decoration: none;
@@ -71,7 +72,10 @@ footer {
   padding: 1%;
 }
 footer .flogo {
+  font-family: "shrikhand", "Times New Roman", Times, serif;
   padding-bottom: 1%;
+  font-size: 1.5em;
+  color: white;
 }
 footer .flogo img {
   color: white;
@@ -105,31 +109,31 @@ footer .flien a .fas {
   margin-right: 2%;
 }
 
-.imgfond {
-  position: static;
+.corps {
+  background-color: #f6f6f6;
 }
-.imgfond img {
+.corps .imgfond img {
   width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
-  position: static;
 }
-
-.corps {
+.corps .corpsmenu {
+  position: relative;
   background-color: #f6f6f6;
+  bottom: 75px;
   border-radius: 50px 50px 0 0;
-}
-
-.titre {
   padding: 2%;
 }
-.titre div {
+.corps .corpsmenu .titre {
+  padding: 2%;
+}
+.corps .corpsmenu .titre div {
   display: flex;
   flex-direction: row;
   text-align: center;
   justify-content: space-around;
 }
-.titre div .coeur {
+.corps .corpsmenu .titre div .coeur {
   font-size: 1.75em;
   width: 20%;
 }
