--- a/P3-style-page.scss
+++ b/P3-style-page.scss
@@ -1,38 +1,42 @@
 @import "./P3-style-main.scss";
 
-.imgfond
-{
-    position: static;
-    img
-    {
-        width: 100%;
-        object-fit: cover;
-        position: static;
-    }
-}
+
 
 .corps
 {
     background-color: $palegrey-color;
-    border-radius: 50px 50px 0 0;
-}
-
-.titre
-{
-    padding: 2%;
-    div
+    .imgfond
     {
-        display: flex;
-        flex-direction: row;
-        text-align: center;
-        justify-content: space-around;
-        .coeur
+        img
         {
-            font-size: 1.75em;
-            width: 20%;
+            width: 100%;
+            object-fit: cover;
         }
     }
-
+    .corpsmenu
+    {
+        position: relative;
+        background-color: $palegrey-color;
+        bottom: 75px;
+        border-radius: 50px 50px 0 0;
+        padding: 2%;
+        .titre
+        {
+            padding: 2%;
+            div
+            {
+            	display: flex;
+            	flex-direction: row;
+            	text-align: center;
+            	justify-content: space-around;
+            	.coeur
+            	{
+                	font-size: 1.75em;
+                	width: 20%;
+            	}
+            }
+        }
+    }
 }
 
 .entrees
