--- a/P3-style-index.css
+++ b/P3-style-index.css
@@ -72,7 +72,10 @@ footer {
   padding: 1%;
 }
 footer .flogo {
+  font-family: "shrikhand", "Times New Roman", Times, serif;
   padding-bottom: 1%;
+  font-size: 1.5em;
+  color: white;
 }
 footer .flogo img {
   color: white;
