--- a/P3-style-index.scss
+++ b/P3-style-index.scss
@@ -1,5 +1,54 @@
 @import "./P3-style-main.scss";
 
+.loader 
+{
+    font-size: 10px;
+    margin: 50px auto;
+    width: 11em;
+    height: 11em;
+    border-radius: 50%;
+    background: $tertiary-color;
+    background: linear-gradient(to right, $tertiary-color 10%, rgba(153,226,208, 0) 42%);
+    position: relative;
+    animation: load1 1.4s infinite linear;
+    transform: translateZ(0);
+    &:before
+    {
+        width: 50%;
+        height: 50%;
+        background: #99e2d0;
+        border-radius: 100% 0 0 0;
+        position: absolute;
+        top: 0;
+        left: 0;
+        content: '';
+    }
+    &:after
+    {
+        background: #ffffff;
+        width: 75%;
+        height: 75%;
+        border-radius: 50%;
+        content: '';
+        margin: auto;
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+    }
+}
+  @keyframes load1 
+  {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+  
+
 .hlogo
 {
     img
