--- a/P3-style-index.css
+++ b/P3-style-index.css
@@ -109,6 +109,60 @@ footer .flien a .fas {
   margin-right: 2%;
 }
 
+.loader {
+  font-size: 10px;
+  margin: 50px auto;
+  width: 11em;
+  height: 11em;
+  border-radius: 50%;
+  background: #99E2D0;
+  background: linear-gradient(to right, #99E2D0 10%, rgba(153, 226, 208, 0) 42%);
+  position: relative;
+  -webkit-animation: load1 1.4s infinite linear;
+          animation: load1 1.4s infinite linear;
+  transform: translateZ(0);
+}
+.loader:before {
+  width: 50%;
+  height: 50%;
+  background: #99e2d0;
+  border-radius: 100% 0 0 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  content: "";
+}
+.loader:after {
+  background: #ffffff;
+  width: 75%;
+  height: 75%;
+  border-radius: 50%;
+  content: "";
+  margin: auto;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+}
+
+@-webkit-keyframes load1 {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes load1 {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
 .hlogo img {
   left: 0;
 }
