--- a/P3-style-page.scss
+++ b/P3-style-page.scss
@@ -64,9 +64,10 @@
     margin-top: 2%;
     border-radius: 15px 15px 15px 15px;
     box-shadow: 0px 4px 7px -3px $darkergrey-color;
+    justify-content: space-between;
     .txtmenu
     {
-        width: 70%;
+        overflow: hidden;
     }
     .prix
     {
@@ -74,6 +75,7 @@
         justify-content: flex-end;
         p
         {
+            padding-top: 25px;
             text-align: end;
             height: auto;
         }
@@ -98,9 +100,10 @@
     top: 50px;
     :hover
     {
-        transform: scale(1.1);
+        transform: scale(1.05);
         transition-duration: 0.5s;
         box-shadow: 0px 0px 10px 2px $darkergrey-color;
+        opacity: 0.8;
     }
     a
     {
