--- a/P3-style-main.css
+++ b/P3-style-main.css
@@ -30,9 +30,14 @@ h3 {
   font-size: 2em;
   margin: 0;
 }
+@media (max-width: 799px) {
+  h3 {
+    font-size: 1.5em;
+  }
+}
 
 h4 {
-  font-size: 1.5;
+  font-size: 1.5em;
   margin: 0;
 }
 
@@ -63,6 +68,11 @@ h5 {
   margin: auto;
   position: relative;
   left: -15px;
+}
+
+.fa-heart:hover {
+  color: linear-gradient(0.5turn, #FF79DA, #9256dc);
+  background-color: linear-gradient(0.5turn, #FF79DA, #9256dc);
 }
 
 footer {
